--- a/index.html
+++ b/index.html
@@ -6,29 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      media="screen and (min-width: 900px)"
-      href="widescreen.css"
-    />
-    <link
-      rel="stylesheet"
-      media="screen and (max-width: 600px)"
-      href="smallscreen.css"
-    />
   </head>
   <body>
-    <div>
+
+    <div class="main-box">
       <div class="contain">
-        <h1><i> Eniola Stella-Maris Olanrewaju</i></h1>
+        <h1>Eniola Stella-Maris Olanrewaju</h1>
       </div>
-      <br />
+      </div>
 
       <div class="contained">
-        <div class="about1">
+        <div class="content1">
+
           <h2>About</h2>
+          </div>
+
+          <div class="content2">
+
+          <div class="content3">
           <p>
-            <br />
             Eniola Stella-Maris Olanrewaju (born 2 April 1998), better known as
             Korty EO, or simply Korty, is a Nigerian filmmaker and YouTuber
             known for her video series "Flow, With Korty". EARLY LIFE Olanrewaju
@@ -50,24 +46,37 @@
           </p>
         </div>
 
-        <div class="about1">
-          <img src="./css/images/one.jfif" alt="one" />
-          <img src="./css//images/two.jfif" alt="two" />
-          <br />
-          <img src="./css/images/three.jfif" alt="three" />
-          <img src="./css/images/Eniola.jfif" alt="four" />
+        <div class="content4">
+          <div class="leftTop "><img src="./css/images/one.jfif" alt="one" /></div>
+          <div class="rightTop"> <img src="./css//images/two.jfif" alt="two" /> </div>
+          <div class="leftBottom"><img src="./css/images/three.jfif" alt="three" /></div>
+          <div class="rightBottom"><img src="./css/images/Eniola.jfif" alt="four" /></div>
         </div>
       </div>
 
-      <h2>Discography</h2>
+      </div>
+
+      <div class="content5">
+<div class="disco">Discography</div>
 
       <div class="pictures">
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
-        <img src="" alt="" />
+            <div class="img1">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/o47wJLgoXLA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <p>A girl who doesn't like Igbo men meets a guy who likes Igbo girls</p>
+        </div>
+
+        <div class="img2">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bqavCKbG8FY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>A boy came from Sierria Leone to meet a girl who doesn't like him</p>
       </div>
-      <p>Coded by Tolulope</p>
+
+      <div class="img3">
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x53w3YIhJv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>I met Victony, the artiste who broke his legs</p>
+      </div>
+      
+      </div> 
+    </div>
     </div>
   </body>
 </html>
