--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <div class="contain">
         <h1>Eniola Stella-Maris Olanrewaju</h1>
       </div>
+
+      <div class="content0"><img src="./css/images/edited.jpg" alt=""></div>
       </div>
 
       <div class="contained">
