--- a/index.html
+++ b/index.html
@@ -9,23 +9,13 @@
   </head>
   <body>
 
-    <div class="main-box">
-      <div class="contain">
+    <div class="main-box ">
         <h1>Eniola Stella-Maris Olanrewaju</h1>
-      </div>
+    </div>
 
-      <div class="content0"><img src="./css/images/edited.jpg" alt=""></div>
-      </div>
-
+    <h2>About</h2>
       <div class="contained">
-        <div class="content1">
-
-          <h2>About</h2>
-          </div>
-
-          <div class="content2">
-
-          <div class="content3">
+          <div class="content1">
           <p>
             Eniola Stella-Maris Olanrewaju (born 2 April 1998), better known as
             Korty EO, or simply Korty, is a Nigerian filmmaker and YouTuber
@@ -48,7 +38,7 @@
           </p>
         </div>
 
-        <div class="content4">
+        <div class="content2">
           <div class="leftTop "><img src="./css/images/one.jfif" alt="one" /></div>
           <div class="rightTop"> <img src="./css//images/two.jfif" alt="two" /> </div>
           <div class="leftBottom"><img src="./css/images/three.jfif" alt="three" /></div>
@@ -56,13 +46,10 @@
         </div>
       </div>
 
-      </div>
-
-      <div class="content5">
-<div class="disco">Discography</div>
-
-      <div class="pictures">
-            <div class="img1">
+      <div class="content3">Discography</div>
+      
+      <div class="content4">
+          <div class="img1">
           <iframe width="100%" height="100%" src="https://www.youtube.com/embed/o47wJLgoXLA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <p>A girl who doesn't like Igbo men meets a guy who likes Igbo girls</p>
         </div>
@@ -76,9 +63,5 @@
         <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x53w3YIhJv0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <p>I met Victony, the artiste who broke his legs</p>
       </div>
-      
-      </div> 
-    </div>
-    </div>
   </body>
 </html>
