--- a/index.html
+++ b/index.html
@@ -38,10 +38,15 @@
         </div>
 
         <div class="content2">
+          <div class="class">
           <div class="leftTop "><img src="./css/images/one.jfif" alt="one" /></div>
           <div class="rightTop"> <img src="./css//images/two.jfif" alt="two" /> </div>
+        </div>
+
+        <div class="class1">
           <div class="leftBottom"><img src="./css/images/three.jfif" alt="three" /></div>
           <div class="rightBottom"><img src="./css/images/Eniola.jfif" alt="four" /></div>
+        </div>
         </div>
       </div>
 
